--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Geometer</title>
+<!-- Added "To Fix" to title to make it easier to ID in Tab -->
+  <title>Geometer - To Fix</title>
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%#= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
