--- a/app/views/areas/random.html.erb
+++ b/app/views/areas/random.html.erb
@@ -5,8 +5,9 @@
 <% @radii.each do |radius| %>
   <div class="row">
     <div class="col-sm-12">
+    <!-- fixed paragraph by adding dynamic elements <%= %> -->
       <p class="lead">
-        Click <a href="http://localhost:3000/areas/circle/3">here</a> to see the area of a circle of radius 3.
+        Click <a href="http://localhost:3000/areas/circle/<%= radius %>">here</a> to see the area of a circle of radius <%= radius %>.
       </p>
     </div>
   </div>
